isBuilderImageIncompatible() to check runtime/builder image compatibility